@@ -7,29 +7,27 @@
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
 
-// no direct access
+// No direct access.
 defined('_JEXEC') or die;
+
+// Note. It is important to remove spaces between elements.
 ?>
 
-<ul class="menu<?php echo $params->get('moduleclass_sfx'); ?>">
-<?php
-$level = $list[0]->level;
+<ul class="menu<?php echo $params->get('moduleclass_sfx'); ?>"><?php
 foreach ($list as $i => &$item) :
 
 	// The next item is deeper.
-	if ($item->deeper)
-	{
-		echo "\n\t<li>";
+	if ($item->deeper) {
+		echo '<li>';
 	}
 	// The next item is shallower.
-	elseif ($item->shallower)
-	{
-		echo "\n\t<li>";
+	elseif ($item->shallower) {
+		echo '<li>';
 
 	}
 	// The next item is on the same level.
 	else {
-		echo "\n\t<li>";
+		echo '<li>';
 	}
 
 	// Render the menu item.
@@ -46,20 +44,17 @@ foreach ($list as $i => &$item) :
 	endswitch;
 
 	// The next item is deeper.
-	if ($item->deeper)
-	{
-		echo "\n\t<ul>";
+	if ($item->deeper) {
+		echo '<ul>';
 	}
 	// The next item is shallower.
-	elseif ($item->shallower)
-	{
-		echo "\n\t</li>";
-		echo str_repeat("\n\t</ul>\n\t</li>", $item->level_diff);
+	elseif ($item->shallower) {
+		echo '</li>';
+		echo str_repeat('</ul></li>', $item->level_diff);
 	}
 	// The next item is on the same level.
 	else {
-		echo "\n\t</li>";
+		echo '</li>';
 	}
 endforeach;
-?>
-</ul>
+?></ul>
